// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hb() can combine plain objects 1`] = `
Array [
  Object {
    "a": 1,
  },
  Object {
    "a": 2,
  },
]
`;

exports[`hb() can combine two Context objects 1`] = `
Array [
  Object {
    "a": 1,
  },
  Object {
    "a": 2,
  },
]
`;

exports[`hb() ignores falsy contexts 1`] = `
Array [
  Object {
    "a": 1,
  },
  Object {
    "a": 2,
  },
]
`;

exports[`hb.bind() defines 'template' and 'context' on the returned function 1`] = `
Array [
  Object {
    "context": Context {
      "stack": Array [],
    },
    "template": "{{a}},{{b}}",
  },
  Object {
    "context": Context {
      "stack": Array [
        Context {
          "stack": Array [
            Object {
              "a": 1,
            },
            Object {
              "b": 2,
            },
          ],
        },
      ],
    },
  },
  Object {
    "context": Context {
      "stack": Array [
        Array [
          Object {
            "a": 1,
          },
          Object {
            "b": 2,
          },
        ],
      ],
    },
    "template": "{{a}},{{b}}",
  },
]
`;
